--- a/public/about.html
+++ b/public/about.html
@@ -15,7 +15,9 @@
 
 <body>
 
-    <div class="container-fluid"></div>
+    <div class="container-fluid">
+        <h2 class="tagline">Let's accomplish more together</h2>
+    </div>
 
     <!--navbar-->
     <nav class="navbar sticky-top navbar-dark bg-dark" id="joinmeNavbar">
@@ -25,8 +27,13 @@
             <a class="nav-link disabled" id="activeNavLink" href="#">About</a>
             <a class="nav-link" href="/searchProject">Search Projects</a>
             <button type="button" class="btn btn-default navbar-btn" id="btnSignOut">Sign Out</button>
-            </div>
+        </div>
     </nav>
+
+    <!--image-->
+    <div class="mx-auto" id="help" style="width: 500px;">
+        <img src="assets/images/steps.jpg" class="img-fluid" alt="Sample photo">
+    </div>
 
     <!--aboutCard-->
     <div class="mx-auto" id="About" style="width: 500px;">
@@ -37,48 +44,48 @@
                     JoinMe is a social based project tracking platform for people on the go. Stop drop and collaborate. This application scales.
                     We promise.
                 </p>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
             </div>
         </div>
     </div>
 
-    <div><p>Testing the scroll</p>
-        <p>Testing the scroll</p>
-        <p>Testing the scroll</p>
-        <p>Testing the scroll</p>
-        <p>Testing the scroll</p>
-        <p>Testing the scroll</p>
-        <p>Testing the scroll</p>
-        <p>Testing the scroll</p>
-        <p>Testing the scroll</p>
-        <p>Testing the scroll</p>
-        <p>Testing the scroll</p>
-        <p>Testing the scroll</p>
-        <p>Testing the scroll</p>
-        <p>Testing the scroll</p>
-        <p>Testing the scroll</p>
-    </div>
+    <p>testing scroll</p>
+    <p>testing scroll</p>
+    <p>testing scroll</p>
+    <p>testing scroll</p>
+    <p>testing scroll</p>
+    <p>testing scroll</p>
+    <p>testing scroll</p>
+    <p>testing scroll</p>
+    <p>testing scroll</p>
+    <p>testing scroll</p>
+    <p>testing scroll</p>
+    <p>testing scroll</p>
+    <p>testing scroll</p>
+    <p>testing scroll</p>
 
-
-    <!--image-->
-
-    <div class="mx-auto" id="help" style="width: 500px;">
-        <img src="assets/images/steps.jpg" class="img-fluid" alt="Sample photo">
-    </div>
 
     <!--footer-->
-
     <footer class="fixed-bottom">
         <div class="mx-auto" id="footImg" style="width: 100px;">
             <img src="assets/images/step4.jpg" class="img-fluid" alt="Sample photo">
         </div>
     </footer>
 
+    <!-- Bootstrap jQuery and js -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
+        crossorigin="anonymous"></script>
 
-
-    <!-- Bootstrap jquery and js -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+    <!-- jQuery -->
+    <script src="./assets/js/aboutPage.js"></script>
 </body>
 
 </html>
