--- a/public/about.html
+++ b/public/about.html
@@ -22,8 +22,8 @@
     <!--navbar-->
     <nav class="navbar sticky-top navbar-dark bg-dark" id="joinmeNavbar">
         <div class="container">
-            <a class="nav-link disabled" id="joinmeNavLink" href="#">JoinMe</a>
-            <a class="nav-link" href="/index">Home</a>
+            <a class="nav-link disabled" id="joinmeNavLink" href="#">JoinME</a>
+            <a class="nav-link" href="/user">Home</a>
             <a class="nav-link disabled" id="activeNavLink" href="#">About</a>
             <a class="nav-link" href="/searchProject">Search Projects</a>
             <button type="button" class="btn btn-default navbar-btn" id="btnSignOut">Sign Out</button>
@@ -41,51 +41,43 @@
             <h6 class="card-header">About</h6>
             <div class="card-block">
                 <p class="card-text">
-                    JoinMe is a social based project tracking platform for people on the go. Stop drop and collaborate. This application scales.
+                    JoinME is a social based project tracking platform for people on the go. Stop drop and collaborate. This application scales.
                     We promise.
+                    <br> Starting a project can be tough! But we can increase our progress together! JoinMe allows you to:
+                    <ul>
+                        <li>Enter and track projects/goals.</li>
+                        <li>Share and invite other people.</li>
+                        <li>Search for active projects.</li>
+                        <li>Get notified of user progress.</li>
+                    </ul>
                 </p>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
             </div>
         </div>
     </div>
 
-    <p>testing scroll</p>
-    <p>testing scroll</p>
-    <p>testing scroll</p>
-    <p>testing scroll</p>
-    <p>testing scroll</p>
-    <p>testing scroll</p>
-    <p>testing scroll</p>
-    <p>testing scroll</p>
-    <p>testing scroll</p>
-    <p>testing scroll</p>
-    <p>testing scroll</p>
-    <p>testing scroll</p>
-    <p>testing scroll</p>
-    <p>testing scroll</p>
+    <!--scroll padding-->
+    <div class="mx-auto" id="About" style="height: 200px;">
 
 
-    <!--footer-->
-    <footer class="fixed-bottom">
-        <div class="mx-auto" id="footImg" style="width: 100px;">
-            <img src="assets/images/step4.jpg" class="img-fluid" alt="Sample photo">
-        </div>
-    </footer>
 
-    <!-- Bootstrap jQuery and js -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
-        crossorigin="anonymous"></script>
 
-    <!-- jQuery -->
-    <script src="./assets/js/aboutPage.js"></script>
+        <!--footer-->
+        <footer class="fixed-bottom">
+            <div class="mx-auto" id="footImg" style="width: 100px;">
+                <img src="assets/images/step4.jpg" class="img-fluid" alt="Sample photo">
+            </div>
+        </footer>
+
+        <!-- Bootstrap jQuery and js -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
+            crossorigin="anonymous"></script>
+
+        <!-- jQuery -->
+        <script src="./assets/js/aboutPage.js"></script>
 </body>
 
 </html>
