--- a/public/about.html
+++ b/public/about.html
@@ -26,7 +26,7 @@
             <a class="nav-link" href="/user">Home</a>
             <a class="nav-link disabled" id="activeNavLink" href="#">About</a>
             <a class="nav-link" href="/searchProject">Search Projects</a>
-            <button type="button" class="btn btn-default navbar-btn" id="btnSignOut">Sign Out</button>
+            <a class="btn btn-default navbar-btn" id="btnSignOut" href="/login">Sign Out</a>            
         </div>
     </nav>
 
@@ -46,7 +46,7 @@
                     <br> Starting a project can be tough! But we can increase our progress together! JoinMe allows you to:
                     <ul>
                         <li>Enter and track projects/goals.</li>
-                        <li>Share and invite other people.</li>
+                        <li>Share with others.</li>
                         <li>Search for active projects.</li>
                         <li>Get notified of user progress.</li>
                     </ul>
