--- a/public/about.html
+++ b/public/about.html
@@ -22,9 +22,9 @@
     <!--navbar-->
     <nav class="navbar sticky-top navbar-dark bg-dark" id="joinmeNavbar">
         <div class="container">
-            <a class="nav-link disabled" id="joinmeNavLink" href="#">JoinME</a>
-            <a class="nav-link" href="/user">Home</a>
-            <a class="nav-link disabled" id="activeNavLink" href="#">About</a>
+            <a class="nav-link disabled" id="joinmeNavLink" href="/">JoinME</a>
+            <a class="nav-link" href="/index">Home</a>
+            <a class="nav-link" id="activeNavLink" href="#">About</a>
             <a class="nav-link" href="/searchProject">Search Projects</a>
             <a class="btn btn-default navbar-btn" id="btnSignOut" href="/login">Sign Out</a>            
         </div>
@@ -41,14 +41,16 @@
             <h6 class="card-header">About</h6>
             <div class="card-block">
                 <p class="card-text">
-                    JoinME is a social based project tracking platform for people on the go. Stop drop and collaborate. This application scales.
+                    JoinME is a social based project tracking platform for people on the go who don't want to go it alone. Stop drop and collaborate. This application scales.
                     We promise.
-                    <br> Starting a project can be tough! But we can increase our progress together! JoinMe allows you to:
-                    <ul>
-                        <li>Enter and track projects/goals.</li>
-                        <li>Share with others.</li>
-                        <li>Search for active projects.</li>
-                        <li>Get notified of user progress.</li>
+                    <br> <br> Starting a project can be tough! But we can increase our progress together! For those of us that lose sight of the end goal, JoinME can help you
+                    break your goals into manageable steps because small improvements over time lead to stunning results. The project you are most resisting carries your greatest growth.
+                    JoinMe allows you to:
+                    <ul class="list-group">
+                        <li class="list-group-item">Enter and track projects/goals.</li>
+                        <li class="list-group-item">Share with others.</li>
+                        <li class="list-group-item">Search for active projects to join.</li>
+                        <li class="list-group-item">Get notified of user progress.</li>
                     </ul>
                 </p>
             </div>
@@ -69,8 +71,7 @@
         </footer>
 
         <!-- Bootstrap jQuery and js -->
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
             crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
